# readme-creator

./: LICENSE  compose.yaml
backend/: .dockerignore  Dockerfile  api.py  logging_config.py  main.py  pyproject.toml  requirements.txt
backend/billing_mod/: main.py  pyproject.toml
backend/database/: core.py  pyproject.toml
backend/history_mod/: main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 15759b8a9ace_initial_setup.py  9b6feaf4f939_initial_migrations_setup.py  dc3e60c4bf6a_setup_readme.py
backend/readmegen-mod/: controller.py  main.py  model.py  pyproject.toml  schemas.py  service.py
backend/readmegen-mod/readmeai/config/: settings.py
backend/readmegen-mod/readmeai/core/: pipeline.py
backend/readmegen-mod/readmeai/generators/: builder.py  headers.py
backend/readmegen_mod/: controller.py  model.py  pyproject.toml  service.py
backend/readmegen_mod/readmeai/cli/: main.py
backend/readmegen_mod/readmeai/config/: set.py  settings.py
backend/readmegen_mod/readmeai/core/: pipeline.py
backend/readmegen_mod/readmeai/extractors/: analyzer.py  dependencies.py  metadata.py
backend/readmegen_mod/readmeai/generators/: badges.py  builder.py  emojis.py  headers.py  navigation.py  quickstart.py  tables.py
backend/readmegen_mod/readmeai/generators/banners/: svg.py
backend/readmegen_mod/readmeai/generators/colors/: gradients.py
backend/readmegen_mod/readmeai/models/: anthropic.py  base.py  dalle.py  enums.py  factory.py  gemini.py  offline.py  openai.py  openrouter.py  prompts.py  tokens.py
backend/readmegen_mod/readmeai/parsers/: base.py  cpp.py  docker.py  go.py  gradle.py  maven.py  npm.py  python.py  rust.py  swift.py
backend/readmegen_mod/readmeai/retrievers/git/: metadata.py  providers.py  repository.py
backend/readmegen_mod/readmeai/utilities/: file_handler.py  resource_manager.py
backend/readmegen_mod/tests/: conftest.py
backend/readmegen_mod/tests/cli/: test_main.py
backend/readmegen_mod/tests/generators/: conftest.py  test_badges.py  test_builder.py  test_quickstart.py
backend/readmegen_mod/tests/models/: conftest.py  test_anthropic.py  test_factory.py  test_offline.py  test_openai.py  test_prompts.py
backend/user_mod/: controller.py  main.py  pyproject.toml  schemas.py  users.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  (+3 more)
(+16 files in other folders)
