[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = ["user-mod", "billing-mod", "history-mod","readmegen-mod", "database"]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
