[project]
name = "readmegen_mod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.42.0",
    "anyio==4.7.0",
    "async-timeout==5.0.1",
    "attrs==24.3.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "frozenlist==1.5.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core[grpc]==2.24.0",
    "google-api-python-client==2.156.0",
    "google-auth==2.37.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.3",
    "googleapis-common-protos==1.66.0",
    "grpcio==1.68.1",
    "grpcio-status==1.68.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "multidict==6.1.0",
    "openai==1.58.1",
    "propcache==0.2.1",
    "proto-plus==1.25.0",
    "protobuf==5.29.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.1",
    "pydantic-settings==2.7.1",
    "pyparsing==3.2.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "structlog==24.4.0",
    "tenacity==8.5.0",
    "tiktoken>=0.9.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "yarl==1.18.3",
]
